--- a/test/fixtures/reservations.yml
+++ b/test/fixtures/reservations.yml
@@ -13,12 +13,12 @@
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  start: 2016-11-26 12:03:13
-  end: 2016-11-26 12:03:13
-  price: 1.5
-
-two:
-  start: 2016-11-26 12:03:13
-  end: 2016-11-26 12:03:13
-  price: 1.5
+# This model initially had no columns defined. If you add columns to the
+# model remove the '{}' from the fixture names and add the columns immediately
+# below each fixture, per the syntax in the comments below
+#
+one: {}
+# column: value
+#
+two: {}
+# column: value
